# LC-1X-Plus-MIDI-2-DMX-Plugin

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v1.0-beta.2.md  RELEASE_NOTES_v1.0.0.md  release.sh
.github/workflows/: build-windows.yml
Source/: FixtureProfile.h  PatternData.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SongMode.h  Theme.h  UserProfileStore.cpp  UserProfileStore.h
docs/: README.md
